--- a/main.css
+++ b/main.css
@@ -59,6 +59,7 @@ aside {
 .portfolio-container img {
 	width: 100%;
 	height: auto;
+	box-shadow: 2px 2px 5px rgb(103, 101, 101);
 }
 
 #hum {
@@ -271,7 +272,7 @@ input[type="submit"]:active {
 		display: grid;
 		height: auto;
 		grid-template-rows:1fr 1fr 1fr;
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns:1fr;
 	
 		grid-gap: 30px;
 	}
